# ArticleHub_API

./: .coveragerc  .coveragerc.all  .coveragerc.integration  .coveragerc.unit  .env.example  .env.test  .flake8  .gitignore  Dockerfile  Makefile  README.md  config.py  db.py  docker-compose-dev.yml  docker-compose-ecs.yml  docker-compose.test.yml  docker-compose.yml  ecs-params.yml  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  tests-all.bat  tests-integ.bat  tests-unit.bat  utils.py
.github/workflow/: ci.yml
.github/workflows/: ci.yml
api/: articles.py  auth.py  tasks.py
config/: celery.py  db.py  logger.py  settings.py
models/: article.py  auth.py  log.py
nginx/: Dockerfile  nginx.conf  nginx.local.conf
routers/: articles.py  auth.py
services/: tasks.py
tests/: conftest.py  setup.py
tests/integration/: test_tasks.py
tests/unit/routers/: test_articles.py  test_auth.py
utils/: auth.py  get_collections.py  id.py  strip.py
