[project]
name = "articlehub-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "fastapi[all]>=0.116.1",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
]
